<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
        android:id="@+id/app_ic"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dip" 
        android:contentDescription="@string/app_icon"/>

    
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/app_ic"
	/>

    <TextView
        android:id="@+id/text_version_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/appName"
        android:text="@string/version_code" />

    <TextView
        android:id="@+id/text_version_code_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_alignTop="@+id/text_version_code_title"
        android:layout_toRightOf="@+id/text_version_code_title"/>
    
    <TextView
        android:id="@+id/text_version_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_version_code_title"
        android:text="@string/version_name" />

    <TextView
        android:id="@+id/text_version_name_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_alignTop="@+id/text_version_name_title"
        android:layout_toRightOf="@+id/text_version_name_title"/>
    
    
    <TextView
        android:id="@+id/text_create_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_version_name_title"
        android:layout_alignParentLeft="true"
        android:text="@string/create_date" />
    
    <TextView
        android:id="@+id/text_create_date_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_alignTop="@+id/text_create_date_title"
        android:layout_toRightOf="@+id/text_create_date_title"/>
    
    <TextView
        android:id="@+id/text_change_log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_create_date_title"
        android:layout_alignParentLeft="true"
        android:text="@string/change_log" />
    
    <TextView
        android:id="@+id/text_change_log_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal|vertical"
        android:layout_alignParentLeft="true"
        android:maxLines="10"
        android:layout_below="@+id/text_change_log_title"/>

</RelativeLayout>